responsive : correction de la place du drop-menu dans la version mobile + correction des pages 'créations', 'suivis' et 'paramètres' + responsive des listes générales (pas fini)

--- a/public/css/navbar02.css
+++ b/public/css/navbar02.css
@@ -118,7 +118,7 @@ https://www.w3schools.com/howto/howto_js_responsive_navbar_dropdown.asp
         height: 3.75rem;
         font-size: 1.875rem;
     }
-    dropdown-menu {
+    .dropdown-menu {
         top: 4.0625rem;
         border-radius: 0.375rem;
     }
